name:                pfds
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matonix/pfds#readme
license:             BSD3
license-file:        LICENSE
author:              maton
maintainer:          automatonix@gmail.com
copyright:           2017 maton
category:            Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable graphviz
  hs-source-dirs:      src/PFDS
  main-is:             Viz.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pfds
                     , fgl
                     , fgl-visualize
                     , process
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010
  exposed-modules:     PFDS.Sec5.Queue
                     , PFDS.Sec5.Ex1
                     , PFDS.Sec3.Heap
                     , PFDS.Sec5.SplayHeap
                     , PFDS.Sec5.Ex7
                     , PFDS.Sec5.PairingHeap
                     , PFDS.Sec5.Ex8a
                     , PFDS.Sec5.Ex8b

test-suite pfds-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pfds
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matonix/pfds
